--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.96"
+clap = { version = "4.5.32", features = ["derive"] }
+futures = "0.3.31"
 fuzzy-matcher = "0.3.7"
 nvim-rs = { version = "0.9.0", features = ["use_tokio"] }
 priority-queue = "2.1.2"
