--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ rust_search = "2.1.0"
 socket2 = "0.5.8"
 syn = { version = "2.0.98", features = ["full"] }
 tokio = "1.44.0"
+tokio-stream = { version = "0.1.17", features = ["full"] }
